# hust-software-engineering

./: .gitignore  .map.cpp.un~  CMakeLists.txt  cmdline.cpp  cmdline.h  main.cpp  map.cpp  map.cpp~  map.h  player.cpp  player.h  players.h
testcases/: README.md  autotest.py  config.json  gift_house_0.in  gift_house_0.out  prison_0.in  prison_0.out  prison_2.out  report.csv  requirements.txt
testcases/all/: barrier_0.in  barrier_0.out  basetest0.in  gift_house_0.in  gift_house_0.out  house_0.in  house_0.out  house_1.in  house_1.out  house_11.out  house_13.in  house_3.out  house_4.out  house_6.out  house_8.out  house_9.in  house_tolls_14.out  magic_0.in  magic_1.in  magic_2.in  magic_3.out  mine_0.in  mine_1.in  mine_1.out  mine_2.in  mine_2.out  park_0.in  park_0.out  park_3.out  report.csv  robot_2.in  robot_2.out  sell_1.in  sell_2.in  sell_3.out  sell_4.in  sell_4.out  the_god_of_wealth_0.out  the_god_of_wealth_1.in  the_god_of_wealth_1.out  (+11 more)
testcases/bankrupt/: bankrupt_0.in  bankrupt_0.out  bankrupt_1.in  bankrupt_1.out
testcases/barrier/: barrier_0.in  barrier_0.out  barrier_1.in  barrier_1.out  barrier_2.in  barrier_2.out  barrier_3.in  barrier_3.out  barrier_4.in  barrier_4.out  barrier_5.in  barrier_5.out  barrier_6.in  barrier_6.out  barrier_7.in  barrier_7.out  report.csv
testcases/basetest/: basetest0.in  basetest0.out  presettest1.in  report.csv
testcases/bomb/: bomb_0.in  bomb_1.in  bomb_2.in  bomb_2.out  bomb_3.in  bomb_3.out  bomb_4.in  bomb_4.out  bomb_5.in  bomb_5.out  bomb_6.in  bomb_7.in  bomb_7.out  bomb_8.in  bomb_8.out
(+198 files in other folders)
